--- a/experience/index.html
+++ b/experience/index.html
@@ -90,7 +90,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Subhash kumar</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/subhash-kumar-782513257/"> Subhash kumar</a></h1>
 
 </section>
 <!-- footer section ends -->
