--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/10_FW_QHGyLm-q5xjEe7Fz6VayofdB1bu/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1PAi2kEMM9FrU9By6U0vPZQPl4gMk2I9J/view?usp=drivesdk" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
